--- a/INSTALL
+++ b/INSTALL
@@ -34,6 +34,11 @@
     This example worked with a Windows 7 system with the MinGW compiler, and
     the command was run from a Git Bash shell.
 
+    On an OS X machine, the compiler needed to be pointed to the location
+    of the klsyn package, and this worked:
+
+    pyinstaller --paths=/Library/Python/2.7/site-packages --onefile scripts/doc2klp.py
+
 
 * Troubleshooting
 
